# seex

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: constants.ts  dom.ts  i18n.ts  main.ts  styles.css  tooltip.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  monitor.rs  nlbn.rs  npnp.rs
src/assets/: lcsc-logo.avif
src/features/: export-targets.ts  match.ts  monitor.ts  nlbn.ts  npnp.ts  updates.ts
src/services/: export-config.ts  file-dialogs.ts
src/shared/: errors.ts
src/state/: export-progress.ts
src/styles/: about.css  base.css  components.css  layout.css  lists.css  messages.css  modal.css  settings.css  status.css  tooltip.css  utilities.css
src/ui/: exporter-card.ts  lists.ts  messages.ts  modal.ts  state.ts
