[package]
name = "seex"
version = "1.0.5"
description = "Clipboard event tracker and GUI bridge for exporting LCSC component libraries through nlbn and npnp."
license = "CC-BY-NC-4.0"
repository = "https://github.com/linkyourbin/seex"
homepage = "https://github.com/linkyourbin/seex"
authors = ["linkyourbin"]
edition = "2024"

[lib]
name = "seex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
arboard = "3.6.1"
clipboard-master = "4.0.0"
chrono = "0.4.44"
regex = "1.12.3"
npnp = "1.0.1"
tokio = { version = "1.50.0", features = ["rt", "sync"] }
nlbn = "1.0.25"

[patch.crates-io]
npnp = { path = "../../npnp" }
nlbn = { path = "../../nlbn" }
